# Chat-with-Mistral-7B

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
