[tool.poetry]
name = "chat-with-mistral-7b"
version = "0.1.0"
description = ""
authors = ["ZequnZ <zequn.zhou007@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_with_mistral_7b"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.13.0"
text-generation = "^0.6.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
